--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -44,6 +44,12 @@
       <div *ngIf="active_tab === 'bug'">
         <app-bug-report></app-bug-report>
       </div>
+      <div *ngIf="active_tab === 'ideas'">
+        <app-ideas></app-ideas>
+      </div>
+      <div *ngIf="active_tab === 'api'">
+        <app-api></app-api>
+      </div>
       <div *ngIf="active_tab === 'team'">
         <app-overview></app-overview>
       </div>
