--- a/src/app/discord/discord.component.html
+++ b/src/app/discord/discord.component.html
@@ -24,8 +24,15 @@
 
                     <h1>List of commands</h1>
 
+<!--                  <app-alert type="error" title="Discord bot temporarily offline" [dismissible]="false">-->
+<!--                    <p>-->
+<!--                      The GrepoData Discord bot is currently offline because it has exceeded the number of discord servers it can join.<br/>-->
+<!--                      <strong>Please help us by removing the bot from your old inactive Discord servers</strong>; this is a short term fix while we implement bot sharding as a permanent fix.-->
+<!--                    </p>-->
+<!--                  </app-alert>-->
+
                     <app-alert [type]="'warning'" [title]="'Slash commands'" [dismissible]="false">
-                      <h5>As of <strong>April 30 2022</strong>, the GrepoData discord bot will only respond to slash commands due to a <a href="https://support-dev.discord.com/hc/en-us/articles/4404772028055-Message-Content-Privileged-Intent-for-Verified-Bots" target="_blank">change in Discord's policy</a>. The old commands using the '!gd' prefix will no longer trigger a response because the bot will not see those messages. Please use these slash commands if you want to keep using the bot.</h5>
+                      <h5>As of <strong>August 31 2022</strong>, the GrepoData discord bot will only respond to slash commands due to a <a href="https://support-dev.discord.com/hc/en-us/articles/4404772028055-Message-Content-Privileged-Intent-for-Verified-Bots" target="_blank">change in Discord's policy</a>. The old commands using the '!gd' prefix will no longer trigger a response because the bot will not see those messages. Please use these slash commands if you want to keep using the bot.</h5>
                     </app-alert>
 
                     <hr>
