--- a/src/app/indexer/overview/overview.component.html
+++ b/src/app/indexer/overview/overview.component.html
@@ -1,8 +1,4 @@
-<div *ngIf="world && world.substr(0,2)=='ru'" >
-  <img style="width: 50%; margin-left: 25%;" src="assets/images/ua.png">
-</div>
-
-<div *ngIf="!world || world.substr(0,2)!='ru'" id="pagehead" style="height: 100%; margin: -12px 10px 0 !important;">
+<div id="pagehead" style="height: 100%; margin: -12px 10px 0 !important;">
 
 	<div *ngIf="loading" class="text-center">
 		<div class="align-middle" style="position: relative; top: 250px; left: 25%; width: 50%;">
