--- a/src/app/indexer/town/town.component.html
+++ b/src/app/indexer/town/town.component.html
@@ -1,8 +1,4 @@
-<div *ngIf="world && world.substr(0,2)=='ru'" >
-  <img style="width: 50%; margin-left: 25%;" src="assets/images/ua.png">
-</div>
-
-<div *ngIf="!world || world.substr(0,2)!='ru'" style="min-height: calc(100vh - 160px);">
+<div style="min-height: calc(100vh - 160px);">
 
 	<mat-card class="index-card index-intel-card">
 		<div class="card-header bg-gd-1 text-center text-white" style="margin-bottom: 0; padding: 20px 0 0 !important;">
