--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -9,6 +9,10 @@
   }
 }
 
+.a-menu-item {
+  margin: -5px 0 5px !important;
+}
+
 @media (max-width:768px) {
   .sidebar-list-item {
     margin-top: -10px;
