--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -1,10 +1,6 @@
 <app-search [compare]="true"></app-search>
 
-<div *ngIf="world && world.substr(0,2)=='ru'" >
-  <img style="width: 50%; margin-left: 25%;" src="assets/images/ua.png">
-</div>
-
-<div *ngIf="!world || world.substr(0,2)!='ru'">
+<div>
   <div class="ranking" id="pagehead">
     <mat-card style="padding: 16px 0;">
 
