Republished blog page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,7 +15,9 @@
           &nbsp; | &nbsp;
           <a class="a-link-dialog" routerLink="/privacy">Privacy</a>
           &nbsp; | &nbsp;
-          <a class="a-link-dialog" routerLink="/analytics">Status</a>
+          <a class="a-link-dialog" routerLink="/analytics">Statistics</a>
+          &nbsp; | &nbsp;
+          <a class="a-link-dialog" routerLink="/blog">Blog</a>
         </div>
 
 
@@ -39,7 +41,9 @@
           &nbsp; | &nbsp;
           <a class="a-link-dialog" routerLink="/privacy">Privacy</a>
           &nbsp; | &nbsp;
-          <a class="a-link-dialog" routerLink="/analytics">Status</a>
+          <a class="a-link-dialog" routerLink="/analytics">Statistics</a>
+          &nbsp; | &nbsp;
+          <a class="a-link-dialog" routerLink="/blog">Blog</a>
         </div>
 
       </div>
