--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -101,7 +101,9 @@
                 &nbsp; | &nbsp;
                 <a class="a-link-dialog" routerLink="/privacy">Privacy</a>
                 &nbsp; | &nbsp;
-                <a class="a-link-dialog" routerLink="/analytics">Status</a>
+                <a class="a-link-dialog" routerLink="/analytics">Statistics</a>
+                &nbsp; | &nbsp;
+                <a class="a-link-dialog" routerLink="/blog">Blog</a>
               </div>
 
 
