Bugfixes & update contributions page

--- a/src/app/auth/login-register/login-register.component.html
+++ b/src/app/auth/login-register/login-register.component.html
@@ -151,7 +151,7 @@
                 </div>
                 <div class="form-group">
                   <a class="form-recovery" (click)="togglePasswordForm()">
-                    Back to login <mat-icon class="mat-icon-title-inline" style="vertical-align: sub;">login</mat-icon>
+                    Back to sign in <mat-icon class="mat-icon-title-inline" style="vertical-align: sub;">login</mat-icon>
                   </a>
                 </div>
                 <p class="invalid-feedback" *ngIf="reset_error!=''" style="color: #a94442 !important;"><br/><br/>{{reset_error}}</p>
@@ -172,7 +172,7 @@
                 <div style="margin-top: 70px;">
                   <div class="form-group" style="float: right;">
                     <a class="form-recovery" (click)="togglePasswordForm()" style="position: inherit !important;">
-                      Back to login <mat-icon class="mat-icon-title-inline" style="vertical-align: sub;">login</mat-icon>
+                      Back to sign in <mat-icon class="mat-icon-title-inline" style="vertical-align: sub;">login</mat-icon>
                     </a>
                   </div>
                 </div>
