--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -229,24 +229,27 @@
 <div class="footer text-center">
   <div class="container">
     <div class="row">
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 disclaimer">
-          <!--<strong>Copyright notices: </strong>&nbsp;-->
-          Grepolis is a browser game by InnoGames GmbH. This is an unofficial 3rd party site
-          <br/>
-          Gameplay images related to Grepolis are copyright of InnoGames GmbH.
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 disclaimer">
-          Copyright &copy; Grepodata {{date| date:'yyyy'}}
-          <br/>
-          <a class="a-link-dialog" (click)="showDisclaimerDialog()">Disclaimer</a>
-          &nbsp; | &nbsp;
-          <a class="a-link-dialog" routerLink="/privacy">Privacy</a>
-          &nbsp; | &nbsp;
-          <a class="a-link-dialog" routerLink="/analytics">Status</a>
-        </div>
-
-
+      <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 disclaimer">
+        <!--<strong>Copyright notices: </strong>&nbsp;-->
+        Grepolis is a browser game by InnoGames GmbH. This is an unofficial 3rd party site
+        <br/>
+        Gameplay images related to Grepolis are copyright of InnoGames GmbH.
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 disclaimer">
+        Copyright &copy; GrepoData {{date| date:'yyyy'}}
+        <br/>
+        <a class="a-link-dialog" (click)="showDisclaimerDialog()">Disclaimer</a>
+        &nbsp; | &nbsp;
+        <a class="a-link-dialog" routerLink="/privacy">Privacy</a>
+        &nbsp; | &nbsp;
+        <a class="a-link-dialog" routerLink="/analytics">Statistics</a>
+        &nbsp; | &nbsp;
+        <a class="a-link-dialog" routerLink="/blog">Blog</a>
+      </div>
+      <div class="col-xs-12">
+        <br/>
+        <br/>
+        <span style="color: white; font-weight: 400;">Powered by <a target="_blank" href="https://camiel.dev" style="color: #18bc9c;">camiel.dev</a></span>
       </div>
     </div>
   </div>
